доработки бота